--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,6 @@
 from vllm/vllm-openai:v0.9.1
 
-RUN pip3 install flash_attn==2.8.0.post2
-RUN pip3 install transformers==4.51.3
+RUN pip3 uninstall -y flash_attn
+
+# Cài đúng version tương thích
+RUN pip3 install flash-attn==2.7.4.post1
